# OneBot-CAI

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
onebot_cai/: __init__.py  __main__.py  action.py  const.py  exception.py  log.py  login.py  main.py  run.py  server.py
onebot_cai/config/: __init__.py  config.py  generator.py
onebot_cai/connect/: __init__.py  exception.py  http.py  models.py  status.py  utils.py  ws.py  ws_reverse.py
onebot_cai/models/: action.py  event.py  message.py  others.py
onebot_cai/msg/: __init__.py  event.py  event_model.py  message.py  models.py
onebot_cai/msg/models/: __init__.py  message.py  others.py
onebot_cai/utils/: __init__.py  database.py  media.py  runtime.py
